question-1/vpc-stack.yml
Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 192.168.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: MyVPC

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: IGW

  VPCGatewayAttach:
    Properties:
      InternetGatewayId:
        Ref: InternetGateway
      VpcId:
        Ref: VPC
    Type: AWS::EC2::VPCGatewayAttachment

  PublicRouteTable:
    Properties:
      Tags:
        - Key: Name
          Value: Route Table for Public subnet
      VpcId:
        Ref: VPC
    Type: AWS::EC2::RouteTable

  RouteToInternet:
    DependsOn: VPCGatewayAttach
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: InternetGateway
      RouteTableId:
        Ref: PublicRouteTable
    Type: AWS::EC2::Route

  PublicSubnet1:
    Properties:
      AvailabilityZone: ap-southeast-1a
      CidrBlock: 192.168.0.0/24
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: Public Subnet 1
      VpcId:
        Ref: VPC
    Type: AWS::EC2::Subnet

  PublicSubnet2:
    Properties:
      AvailabilityZone: ap-southeast-1b
      CidrBlock: 192.168.1.0/24
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: Public Subnet 2
      VpcId:
        Ref: VPC
    Type: AWS::EC2::Subnet

  Public1InternetRouteTable:
    Properties:
      RouteTableId:
        Ref: PublicRouteTable
      SubnetId:
        Ref: PublicSubnet1
    Type: AWS::EC2::SubnetRouteTableAssociation

  Public2InternetRouteTable:
    Properties:
      RouteTableId:
        Ref: PublicRouteTable
      SubnetId:
        Ref: PublicSubnet2
    Type: AWS::EC2::SubnetRouteTableAssociation

## Private Subnet 1

  PrivateRouteTable1:
    Properties:
      Tags:
        - Key: Name
          Value: Route Table for Private subnet 1
      VpcId:
        Ref: VPC
    Type: AWS::EC2::RouteTable

  EIP1:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc

  NATGateway1:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt EIP1.AllocationId
      ConnectivityType: public
      SubnetId: !Ref PublicSubnet1

  RouteNATGateway1:
    DependsOn: NATGateway1
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable1
      DestinationCidrBlock: '0.0.0.0/0'
      NatGatewayId: !Ref NATGateway1

  PrivateSubnet1:
    Properties:
      AvailabilityZone: ap-southeast-1a
      CidrBlock: 192.168.2.0/24
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: Private Subnet 1
      VpcId:
        Ref: VPC
    Type: AWS::EC2::Subnet

  Private1RouteTableAttach:
    Properties:
      RouteTableId:
        Ref: PrivateRouteTable1
      SubnetId:
        Ref: PrivateSubnet1
    Type: AWS::EC2::SubnetRouteTableAssociation

## Private Subnet 2

  PrivateRouteTable2:
    Properties:
      Tags:
        - Key: Name
          Value: Route Table for Private subnet 2
      VpcId:
        Ref: VPC
    Type: AWS::EC2::RouteTable

  EIP2:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc

  NATGateway2:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt EIP2.AllocationId
      ConnectivityType: public
      SubnetId: !Ref PublicSubnet2

  RouteNATGateway2:
    DependsOn: NATGateway2
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable2
      DestinationCidrBlock: '0.0.0.0/0'
      NatGatewayId: !Ref NATGateway2

  PrivateSubnet2:
    Properties:
      AvailabilityZone: ap-southeast-1b
      CidrBlock: 192.168.3.0/24
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: Private Subnet 2
      VpcId:
        Ref: VPC
    Type: AWS::EC2::Subnet

  Private2RouteTableAttach:
    Properties:
      RouteTableId:
        Ref: PrivateRouteTable2
      SubnetId:
        Ref: PrivateSubnet2
    Type: AWS::EC2::SubnetRouteTableAssociation

  SGforVPC:
    Properties:
      GroupDescription: Security group for VPC
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          Description: SG for VPC
          IpProtocol: -1
      VpcId:
        Ref: VPC
    Type: AWS::EC2::SecurityGroup

Outputs:
  VPC:
    Description: Environment VPC
    Value: !Ref VPC
  PublicSubnet1:
    Description: Public Subnet 1
    Value: !Ref PublicSubnet1
  PublicSubnet2:
    Description: Public Subnet 2
    Value: !Ref PublicSubnet2
  PrivateSubnet1:
    Description: Private Subnet 1
    Value: !Ref PrivateSubnet1
  PrivateSubnet2:
    Description: Private Subnet 2
    Value: !Ref PrivateSubnet2
  SGforVPC:
    Description: Security Group for VPC
    Value: !Ref SGforVPC
  PrivateRouteTable1:
    Description: Private Route Table 1
    Value: !Ref PrivateRouteTable1
  PrivateRouteTable2:
    Description: Private Route Table 2
    Value: !Ref PrivateRouteTable2
